--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.22.0",
     "@types/jest": "^29.5.14",
+    "eslint": "^9.22.0",
+    "globals": "^16.0.0",
     "jest": "^29.6.1",
     "ts-jest": "^29.2.6",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.26.1"
   },
   "dependencies": {
     "@azure/functions": "^4.6.1",
