--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "prepare": "npm run build",
-    "lint": "eslint ."
+    "prepare": "is-ci || husky install",
+    "lint": "eslint .",
+    "lint-staged": "lint-staged"
   },
   "keywords": [],
   "author": "",
@@ -16,8 +17,14 @@
     "@eslint/js": "^9.22.0",
     "@types/jest": "^29.5.14",
     "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "globals": "^16.0.0",
+    "husky": "^8.0.0",
+    "is-ci": "^4.1.0",
     "jest": "^29.6.1",
+    "lint-staged": "^15.5.0",
+    "prettier": "^3.5.3",
     "ts-jest": "^29.2.6",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.26.1"
