--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lint-staged": "^15.5.0",
     "prettier": "^3.5.3",
     "ts-jest": "^29.2.6",
+    "tsc-files": "^1.1.4",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.26.1"
   },
