--- a/.github/workflows/publish-func.yml
+++ b/.github/workflows/publish-func.yml
@@ -27,6 +27,6 @@ jobs:
         run: npm run test
       - name: Publish package on NPM 📦
         if: ${{ github.event_name == 'release' }}
-        run: npm publish dist --access=public
+        run: npm publish ./dist --access=public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
