--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "azure-functions-essentials",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Essential utilities for Azure Functions",
+  "repository": "https://github.com/AlexPshul/azure-functions-essentials",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc && shx cp README.md dist/README.md && shx cp LICENSE dist/LICENSE && shx cp package.json dist/package.json",
